--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,14 @@
-<hr />
-<p>Published using <a href="http://jekyllrb.com">Jekyll</a> at {{site.time}}</p>
+<div class="row small">
+	<div class="col-md-12">
+		<hr />
+		<img src="/assets/images/airquill-icon.png" class="pull-right"/>
+		<p>
+			Copyright &copy; 2014 <a href="/about.html">Tiese Barrell</a>. All rights reserved.
+		</p>
+		<p>
+			Published using <a href="http://jekyllrb.com">Jekyll</a> on {{site.time | date_to_long_string}}
+		</p>
+		
+	</div>
+</div>
 
-<p>Copyright &copy; 2014 Tiese Barrell. All rights reserved</p>
