--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,44 +1,27 @@
-<div class="navbar navbar-inverse">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="#">Brand</a>
-  </div>
-  <div class="navbar-collapse collapse navbar-inverse-collapse">
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Active</a></li>
-      <li><a href="#">Link</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li class="divider"></li>
-          <li class="dropdown-header">Dropdown header</li>
-          <li><a href="#">Separated link</a></li>
-          <li><a href="#">One more separated link</a></li>
-        </ul>
-      </li>
-    </ul>
-    <form class="navbar-form navbar-left">
-      <input class="form-control col-lg-8" placeholder="Search" type="text">
-    </form>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Link</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li class="divider"></li>
-          <li><a href="#">Separated link</a></li>
-        </ul>
-      </li>
-    </ul>
-  </div>
+<div class="row">
+	<div class="col-md-12">
+		<div class="navbar navbar-inverse">
+		  <div class="navbar-header">
+		    <a class="navbar-brand" href="/index.html">{{ site.name }}</a>
+		  </div>
+		  <div class="navbar-collapse collapse navbar-inverse-collapse">
+		    <ul class="nav navbar-nav">
+		      <li class="dropdown">
+		      	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Posts <b class="caret"></b></a>
+		        <ul class="dropdown-menu">
+		          <li><a href="/posts.html">All Posts</a></li>
+		          <li class="divider"></li>
+		          <li><a href="/tag/activiti.html">Activiti</a></li>
+		          <li><a href="/tag/bpm.html"><abbr title="Business Process Management">BPM</abbr></a></li>
+		          <li><a href="/tag/oss.html"><abbr title="Open Source Software">OSS</abbr></a></li>
+		        </ul>
+		      </li>
+		      <li><a href="/about.html">About</a></li>
+		    </ul>
+		    <form class="navbar-form navbar-right">
+		      <input class="form-control col-lg-8" placeholder="Search" type="text">
+		    </form>
+		  </div>
+		</div>
+	</div>
 </div>
