Setting up blog feeds.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,14 @@
 		<hr />
 		<img src="/assets/images/airquill-icon.png" class="pull-right"/>
 		<p>
-			Copyright &copy; 2014 <a href="/about.html">Tiese Barrell</a>. All rights reserved.
+			Copyright &copy; 2014 <a href="/about.html" class="footer-link">Tiese Barrell</a>. All rights reserved. 
 		</p>
 		<p>
-			Published using <a href="http://jekyllrb.com">Jekyll</a> on {{site.time | date_to_long_string}}
+			Follow posts with <a href="/feed.xml" class="footer-link">RSS</a> or <a href="/atom.xml" class="footer-link"></span>Atom</a>.
 		</p>
-		
+		<p>
+			Published using <a href="http://jekyllrb.com" class="footer-link">Jekyll</a> on {{site.time | date_to_long_string}}
+		</p>
 	</div>
 </div>
 
