--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,8 +18,8 @@
 		      </li>
 		      <li><a href="/about.html">About</a></li>
 		    </ul>
-		    <form class="navbar-form navbar-right">
-		      <input class="form-control col-lg-8" placeholder="Search" type="text">
+		    <form class="navbar-form navbar-right" method="get" action="http://www.google.com/search" onSubmit="googleSiteSearch(this)">
+		      <input class="form-control col-lg-8" name="q" placeholder="Search" type="text" />
 		    </form>
 		  </div>
 		</div>
