--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -18,3 +18,12 @@ body {
 .container.post p {
 	text-align: justify;
 }
+
+.footer-link {
+	color: #808080;
+	text-decoration: underline;
+}
+
+.footer-link:hover {
+	text-decoration: none;
+}
