--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 			Follow posts with <a href="/feed.xml" class="footer-link">RSS</a> or <a href="/atom.xml" class="footer-link"></span>Atom</a>.
 		</p>
 		<p>
-			Published using <a href="http://jekyllrb.com" class="footer-link">Jekyll</a> on {{site.time | date_to_long_string}}
+			Published using <a href="http://jekyllrb.com" class="footer-link">Jekyll</a> (v. {{ jekyll.version }}) on {{site.time | date_to_long_string}}
 		</p>
 	</div>
 </div>
