--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,11 @@
 	<div class="col-md-12">
 		<div class="navbar navbar-inverse">
 		  <div class="navbar-header">
+		  	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
+		      <span class="icon-bar"></span>
+		      <span class="icon-bar"></span>
+		      <span class="icon-bar"></span>
+		    </button>
 		    <a class="navbar-brand" href="/index.html">{{ site.name }}</a>
 		  </div>
 		  <div class="navbar-collapse collapse navbar-inverse-collapse">
