--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,9 @@
     <!-- Bootstrap -->
     <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     
+    <!-- Pygment styles -->
+    <link href="/assets/styles/pygments/github.css" rel="stylesheet">
+
     <!-- Custom styles -->
     <link href="/assets/styles/styles.css" rel="stylesheet">
 
