Added page titles to post pages.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ site.name }}</title>
+    <title>
+      {% if page.layout == 'post' %}
+        {{ page.title }} :: 
+      {% endif %}
+      {{ site.name }}
+    </title>
 
     <!-- Bootstrap -->
     <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
