Added post on storing data in processes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 			Copyright &copy; 2014 <a href="/about.html" class="footer-link">Tiese Barrell</a>. All rights reserved. 
 		</p>
 		<p>
-			Follow posts with <a href="/feed.xml" class="footer-link">RSS</a> or <a href="/atom.xml" class="footer-link"></span>Atom</a>.
+			Follow posts with <a href="/feed.xml" class="footer-link"><i class="fa fa-rss">&nbsp;</i>RSS</a> or <a href="/atom.xml" class="footer-link"></span><i class="fa fa-rss">&nbsp;</i>Atom</a>.
 		</p>
 		<p>
 			Published using <a href="http://jekyllrb.com" class="footer-link">Jekyll</a> (v. {{ jekyll.version }}) on {{site.time | date_to_long_string}}
