--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,14 +9,10 @@
       {{ site.name }}
     </title>
 
-    <!-- Bootstrap -->
-    <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    
-    <!-- Pygment styles -->
-    <link href="/assets/styles/pygments/github.css" rel="stylesheet">
-
-    <!-- Custom styles -->
-    <link href="/assets/styles/styles.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="screen" href="/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/assets/styles/pygments/github.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/assets/styles/styles.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -27,6 +23,7 @@
     
     <!-- RSS -->
   	<link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
   	
   	<script type="text/javascript">
 		var site = "{{ site.url }}";
