--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<p class="smaller">
-						Posted {{page.date | date_to_long_string }}
+						Posted {{page.date | date_to_long_string }} {% if page.location %} | {{ page.location }} {% endif %} | {{ page.content | number_of_words }} words
 					</p>
 				</div>
 			</div>
