--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,6 +39,11 @@
 		          			</a>
 		          		</li>
 		          		<li>
+		          			<a href="/tag/mockito.html">
+		          				Mockito
+		          			</a>
+		          		</li>
+		          		<li>
 		          			<a href="/tag/oss.html">
 		          				<abbr title="Open Source Software">OSS</abbr>
 		          			</a>
