--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 		<hr />
 		<img src="/assets/images/airquill-icon.png" class="pull-right"/>
 		<p>
-			Copyright &copy; 2014 <a href="/about.html" class="footer-link">Tiese Barrell</a>. All rights reserved. 
+			Copyright &copy; 2014-2015 <a href="/about.html" class="footer-link">Tiese Barrell</a>. All rights reserved. 
 		</p>
 		<p>
 			Follow posts with <a href="/feed.xml" class="footer-link"><i class="fa fa-rss">&nbsp;</i>RSS</a> or <a href="/atom.xml" class="footer-link"></span><i class="fa fa-rss">&nbsp;</i>Atom</a>.
