--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,35 @@
 				<div class="col-md-7">
 
 					<section class="post-content">
+
+						{% if page.tldr %}
+						<div class="row">
+							<div class="col-md-11">
+								<p class="lead tldr">
+									{{page.excerpt | markdownify }}
+								</p>
+							</div>
+							<div class="col-md-1">
+								<a href="#tldr" class="btn btn-warning">
+									<i class="fa fa-coffee">&nbsp;</i>TL;DR
+								</a>
+							</div>
+						</div>
+						{% endif %}
+
 						{{ content }}
+
+						{% if page.tldr %}
+						<a id="tldr"></a>
+						<div class="panel panel-warning">
+  							<div class="panel-heading">
+    							<h3 class="panel-title"><i class="fa fa-coffee">&nbsp;</i>TL;DR</h3>
+  							</div>
+  							<div class="panel-body">
+    							{{page.tldr | markdownify}}
+  							</div>
+						</div>
+						{% endif %}
 					</section>
 
 					<div class="panel panel-primary">
