--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,16 +23,18 @@
 		          			</a>
 		          		</li>
 		          		<li class="divider"></li>
-		          		{% for currentTag in site.tags %}
-						  	{% assign currentTagPlain = currentTag[0] %}
+		          		{% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
+						{% assign tag_words = site_tags | split:',' | sort %}
+
+						{% for currentTag in tag_words %}
 						  	<li>
 						    	<a href="/tag/{{currentTagPlain}}.html">
-						    		{% if site.data.tags[currentTagPlain][0].abbr %}
-						    		<abbr title="{{site.data.tags[currentTagPlain][0].abbr}}">
-						    			{{site.data.tags[currentTagPlain][0].name}}	
+						    		{% if site.data.tags[currentTag][0].abbr %}
+						    		<abbr title="{{site.data.tags[currentTag][0].abbr}}">
+						    			{{site.data.tags[currentTag][0].name}}	
 						    		</abbr>
 						    		{% else %}
-						    			{{site.data.tags[currentTagPlain][0].name}}
+						    			{{site.data.tags[currentTag][0].name}}
 						    		{% endif %}
 						    	</a>
 						  	</li>
