--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -11,7 +11,7 @@
 		
 			<div class="row">
 				<div class="col-md-12">
-					<h1>{{site.data.tags[page.tag][0].name}} Posts</h1>
+					<h1>Posts tagged {{site.data.tags[page.tag][0].name}}</h1>
 				</div>
 			</div>
 			
@@ -23,17 +23,20 @@
 				<div class="col-md-4">
 					<h2>Posts by tag</h2>
 					<ul class="list-group">
-					{% for currentTag in site.tags | sort %}
-					  	{% assign currentTagPlain = currentTag[0] %}
+
+					{% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
+					{% assign tag_words = site_tags | split:',' | sort %}
+
+					{% for currentTag in tag_words %}
 					  	<li class="list-group-item">
-					    	<span class="badge">{{ site.tags[currentTagPlain] | size }}</span>
+					    	<span class="badge">{{ site.tags[currentTag] | size }}</span>
 					    	<a href="/tag/{{currentTagPlain}}.html">
 					    		{% if site.data.tags[currentTagPlain][0].abbr %}
 					    		<abbr title="{{site.data.tags[currentTagPlain][0].abbr}}">
-					    			{{site.data.tags[currentTagPlain][0].name}}	
+					    			{{site.data.tags[currentTag][0].name}}	
 					    		</abbr>
 					    		{% else %}
-					    			{{site.data.tags[currentTagPlain][0].name}}
+					    			{{site.data.tags[currentTag][0].name}}
 					    		{% endif %}
 					    	</a>
 					  	</li>
