Updated on-the-road. * Added styles for tables (Q&D)

--- a/assets/styles/airquill-styles.less
+++ b/assets/styles/airquill-styles.less
@@ -23,7 +23,7 @@ section.post-content {
 	line-height: 32px;
 	font-size: 110%;
 	font-weight: 300;
-	font-family: "Roboto Slab", sans-serif; 
+	font-family: "Roboto Slab", sans-serif;
 }
 
 section.post-content {
@@ -85,4 +85,12 @@ a.profile i {
 
 .footer-link:hover {
 	text-decoration: none;
+}
+
+table.light {
+  border-spacing: 10px;
+  border-collapse: separate;
+  td {
+    padding: 10px;
+  }
 }
