Setting up new look.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,9 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
-		    	<span class="icon-bar"></span>
-		    	<span class="icon-bar"></span>
-		    	<span class="icon-bar"></span>
-		    </button>
-		    <a class="navbar-brand" href="/index.html">{{ site.name }}</a>
-		</div>
+	<div class="container" style="background: url(/assets/images/hexagon-pattern.png) repeat; background-color: #333333;">
 
-		<div class="navbar-collapse collapse navbar-inverse-collapse">
-
+		<a href="/">
+			<img src="/assets/images/airquill-logo-new.svg" />
+		</a>
 			<ul class="nav navbar-nav">
 		    	<li class="dropdown">
 		      		<a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -45,10 +38,10 @@
 		      		<a href="/about.html">About</a>
 		      	</li>
 		    </ul>
+		<a href="/posts/">Posts</a>
 
-		    <form class="navbar-form navbar-right" method="get" action="http://www.google.com/search" onSubmit="googleSiteSearch(this)">
-		      <input class="form-control col-lg-8" name="q" placeholder="Search" type="text" />
-		    </form>
+		<a href="/about/">About</a>
+
 		</div>
 	</div>
 </div>
