Setting up new look.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,54 +1,16 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
-		    	<span class="icon-bar"></span>
-		    	<span class="icon-bar"></span>
-		    	<span class="icon-bar"></span>
-		    </button>
-		    <a class="navbar-brand" href="/index.html">{{ site.name }}</a>
-		</div>
+	<div class="container" style="background: url(/assets/images/hexagon-pattern.png) repeat; background-color: #333333;">
 
-		<div class="navbar-collapse collapse navbar-inverse-collapse">
+		<a href="/">
+			<img src="/assets/images/airquill-logo-new.svg" />
+		</a>
 
-			<ul class="nav navbar-nav">
-		    	<li class="dropdown">
-		      		<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-		      			Posts <b class="caret"></b>
-		      		</a>
-		        	<ul class="dropdown-menu">
-		          		<li>
-		          			<a href="/posts.html">
-		          				All Posts
-		          			</a>
-		          		</li>
-		          		<li class="divider"></li>
-		          		{% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
-						{% assign tag_words = site_tags | split:',' | sort %}
 
-						{% for currentTag in tag_words %}
-						  	<li>
-						    	<a href="/tag/{{currentTag}}.html">
-						    		{% if site.data.tags[currentTag][0].abbr %}
-						    		<abbr title="{{site.data.tags[currentTag][0].abbr}}">
-						    			{{site.data.tags[currentTag][0].name}}
-						    		</abbr>
-						    		{% else %}
-						    			{{site.data.tags[currentTag][0].name}}
-						    		{% endif %}
-						    	</a>
-						  	</li>
-						{% endfor %}
-		        	</ul>
-		      	</li>
-		      	<li>
-		      		<a href="/about.html">About</a>
-		      	</li>
-		    </ul>
 
-		    <form class="navbar-form navbar-right" method="get" action="http://www.google.com/search" onSubmit="googleSiteSearch(this)">
-		      <input class="form-control col-lg-8" name="q" placeholder="Search" type="text" />
-		    </form>
+		<a href="/posts/">Posts</a>
+
+		<a href="/about/">About</a>
+
 		</div>
 	</div>
 </div>
