--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,40 @@
 		<a href="/">
 			<img src="/assets/images/airquill-logo-new.svg" />
 		</a>
+			<ul class="nav navbar-nav">
+		    	<li class="dropdown">
+		      		<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+		      			Posts <b class="caret"></b>
+		      		</a>
+		        	<ul class="dropdown-menu">
+		          		<li>
+		          			<a href="/posts/">
+		          				All Posts
+		          			</a>
+		          		</li>
+		          		<li class="divider"></li>
+		          		{% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
+						{% assign tag_words = site_tags | split:',' | sort %}
 
-
-
+						{% for currentTag in tag_words %}
+						  	<li>
+						    	<a href="/tag/{{currentTag}}">
+						    		{% if site.data.tags[currentTag][0].abbr %}
+						    		<abbr title="{{site.data.tags[currentTag][0].abbr}}">
+						    			{{site.data.tags[currentTag][0].name}}
+						    		</abbr>
+						    		{% else %}
+						    			{{site.data.tags[currentTag][0].name}}
+						    		{% endif %}
+						    	</a>
+						  	</li>
+						{% endfor %}
+		        	</ul>
+		      	</li>
+		      	<li>
+		      		<a href="/about.html">About</a>
+		      	</li>
+		    </ul>
 		<a href="/posts/">Posts</a>
 
 		<a href="/about/">About</a>
