--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -105,7 +105,7 @@
 										<i class="fa fa-tags">&nbsp;</i>Tags
 									</h4>
 									{% for tag in page.tags %}
-										<a href="/tag/{{tag}}.html" title="Posts with tag {{tag}}">{{tag}}</a>&nbsp;
+										<a href="/tag/{{tag}}" title="Posts with tag {{tag}}">{{tag}}</a>&nbsp;
 									{% endfor %}
 								</div>
 							</div>
