--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,10 +9,10 @@
     {{ site.name }}
   </title>
 
-  <link rel="stylesheet" type="text/css" media="screen" href="/assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" media="screen" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
-  <link rel="stylesheet" type="text/css" media="screen" href="/assets/styles/pygments/github.css">
-  <link rel="stylesheet" type="text/css" media="screen" href="/assets/styles/airquill.css">
+<!--  <link rel="stylesheet" type="text/css" media="screen" href="/assets/bootstrap/css/bootstrap.min.css">-->
+<!--  <link rel="stylesheet" type="text/css" media="screen" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">-->
+<!--  <link rel="stylesheet" type="text/css" media="screen" href="/assets/styles/pygments/github.css">-->
+  <link rel="stylesheet" type="text/css" media="screen" href="/assets/styles/airquill-from-less.css">
 
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300,700|Lato:100,300|Roboto:400,400italic,700|Montserrat:400,700|Roboto+Slab:400,300,700" rel="stylesheet" type="text/css">
 
