--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,13 @@
-<div class="navbar navbar-inverse navbar-fixed-top">
-	<div class="container" style="background: url(/assets/images/hexagon-pattern.png) repeat; background-color: #333333;">
+<div class="container-fluid stripe" style="height: 9px; background-color: #ffff00;">
+	<div class="row">
+		<div class="col-12" >&nbsp;</div>
+	</div>
+</div>
+<!--  navbar-fixed-top -->
+<nav class="navbar navbar-inverse" style="background: url(/assets/images/lifted-square-pattern.png) repeat; min-height:99px; background-color: #333333;">
+	<div class="container">
 
-		<a href="/">
+		<a href="/" class="logo">
 			<img src="/assets/images/airquill-logo-new.svg" />
 		</a>
 			<ul class="nav navbar-nav">
@@ -35,13 +41,17 @@
 		        	</ul>
 		      	</li>
 		      	<li>
-		      		<a href="/about.html">About</a>
+		      		<a href="/about/">About</a>
 		      	</li>
 		    </ul>
-		<a href="/posts/">Posts</a>
 
-		<a href="/about/">About</a>
+<!--		<a href="/">-->
+<!--			<img src="/assets/images/airquill-logo-new.svg" />-->
+<!--		</a>-->
+
+<!--		<a href="/posts/">Posts</a>-->
+
+<!--		<a href="/about/">About</a>-->
 
 		</div>
-	</div>
-</div>
+	</nav>
