Setting up new look.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>
     {% if page.layout == 'post' %}
       {{ page.title }} :: 
@@ -9,30 +9,21 @@
     {{ site.name }}
   </title>
 
-<!--  <link rel="stylesheet" type="text/css" media="screen" href="/assets/bootstrap/css/bootstrap.min.css">-->
-<!--  <link rel="stylesheet" type="text/css" media="screen" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">-->
 <!--  <link rel="stylesheet" type="text/css" media="screen" href="/assets/styles/pygments/github.css">-->
-  <link rel="stylesheet" type="text/css" media="screen" href="/assets/styles/airquill-from-less.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="/assets/styles/airquill.min.css">
 
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300,700|Lato:100,300|Roboto:400,400italic,700|Montserrat:400,700|Roboto+Slab:400,300,700" rel="stylesheet" type="text/css">
-
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-  <![endif]-->
     
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
   	
-  <script type="text/javascript">
-	  var site = "{{ site.url }}";
+<!--  <script type="text/javascript">-->
+<!--	  var site = "{{ site.url }}";-->
 
-	  function googleSiteSearch(scope) {
-		 scope.q.value = scope.q.value + " site:" + site;
-	  }
-  </script>
+<!--	  function googleSiteSearch(scope) {-->
+<!--		 scope.q.value = scope.q.value + " site:" + site;-->
+<!--	  }-->
+<!--  </script>-->
   	
  </head>
