--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,15 @@
 
 	{% include head.html %}
 
-	<body>
+	<body class="theme-light">
 	
 		{% include header.html %}
 			
-		<div class="container page-header">
+		<section class="container main post-listing">
 			{{ content }}
 
 			{% include footer.html %}
-		</div>
+		</section>
 
 		{% include foot.html %}
 
