--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <div class="row small">
 	<div class="col-md-12">
 		<hr />
-		<img src="/assets/images/airquill-icon.png" class="pull-right"/>
+<!--		<img src="/assets/images/airquill-icon.png" class="pull-right"/>-->
 		<p>
-			Copyright &copy; 2014-2018 <a href="/about.html" class="footer-link">Tiese Barrell</a>. All rights reserved.
+			Copyright &copy; 2014-2019 <a href="/about/" class="footer-link">Tiese Barrell</a>. All rights reserved.
 		</p>
 		<p>
 			Follow posts with <a href="/feed.xml" class="footer-link"><i class="fa fa-rss">&nbsp;</i>RSS</a> or <a href="/atom.xml" class="footer-link"></span><i class="fa fa-rss">&nbsp;</i>Atom</a>.
