--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,55 +3,66 @@
 		<div class="col-12" >&nbsp;</div>
 	</div>
 </div>
+
 <!--  navbar-fixed-top -->
-<nav class="navbar navbar-inverse" style="background: url(/assets/images/lifted-square-pattern.png) repeat; min-height:99px; background-color: #333333;">
+<nav class="main">
 	<div class="container">
 
-		<a href="/" class="logo">
-			<img src="/assets/images/airquill-logo-new.svg" />
-		</a>
-			<ul class="nav navbar-nav">
-		    	<li class="dropdown">
-		      		<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-		      			Posts <b class="caret"></b>
-		      		</a>
-		        	<ul class="dropdown-menu">
-		          		<li>
-		          			<a href="/posts/">
-		          				All Posts
-		          			</a>
-		          		</li>
-		          		<li class="divider"></li>
-		          		{% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
-						{% assign tag_words = site_tags | split:',' | sort %}
+        <a class="logo" href="/">&nbsp;</a>
 
-						{% for currentTag in tag_words %}
-						  	<li>
-						    	<a href="/tag/{{currentTag}}">
-						    		{% if site.data.tags[currentTag][0].abbr %}
-						    		<abbr title="{{site.data.tags[currentTag][0].abbr}}">
-						    			{{site.data.tags[currentTag][0].name}}
-						    		</abbr>
-						    		{% else %}
-						    			{{site.data.tags[currentTag][0].name}}
-						    		{% endif %}
-						    	</a>
-						  	</li>
-						{% endfor %}
-		        	</ul>
-		      	</li>
-		      	<li>
-		      		<a href="/about/">About</a>
-		      	</li>
-		    </ul>
+		<ul class="nav justify-content-end">
+			<li class="nav-item">
+				<a class="nav-link"  href="/posts/">Posts</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link"  href="/about/">About</a>
+			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle"
+				   data-toggle="dropdown"
+				   href="#"
+				   role="button"
+				   aria-haspopup="true"
+				   aria-expanded="false">
+					<i class="fas fa-search"></i>
+				</a>
+				<div class="dropdown-menu">
+					<form class="navbar-form navbar-right" method="get" action="http://www.google.com/search" onsubmit="nav.search(this)">
+						<input class="form-control col-lg-12" name="q" placeholder="Search AirQuill" type="text">
+					</form>
+				</div>
+			</li>
+<!--			<li class="nav-item dropdown">-->
+<!--				<a class="nav-link dropdown-toggle"-->
+<!--				   data-toggle="dropdown"-->
+<!--				   href="#"-->
+<!--				   role="button"-->
+<!--				   aria-haspopup="true"-->
+<!--				   aria-expanded="false">-->
+<!--					<i class="fas fa-cog"></i>-->
+<!--				</a>-->
+<!--				<div class="dropdown-menu">-->
+<!--					<a class="nav-link" href="javascript:nav.setTheme('light');">-->
+<!--						<i class="fa fa-square theme-yellow"></i>&nbsp;-->
+<!--						<i class="fa fa-square theme-light-grey"></i>&nbsp;-->
+<!--						<i class="fa fa-square theme-light-grey"></i>&nbsp;-->
+<!--						Light theme-->
+<!--					</a>-->
+<!--					<a class="nav-link" href="javascript:nav.setTheme('white');">-->
+<!--						<i class="fa fa-square theme-white"></i>&nbsp;-->
+<!--						<i class="fa fa-square theme-white"></i>&nbsp;-->
+<!--						<i class="fa fa-square theme-light-grey"></i>&nbsp;-->
+<!--						White theme-->
+<!--					</a>-->
+<!--					<a class="nav-link" href="javascript:nav.setTheme('dark');">-->
+<!--						<i class="fa fa-square theme-dark-grey"></i>&nbsp;-->
+<!--						<i class="fa fa-square theme-dark-grey"></i>&nbsp;-->
+<!--						<i class="fa fa-square theme-dark-grey"></i>&nbsp;-->
+<!--						Dark theme-->
+<!--					</a>-->
+<!--				</div>-->
+<!--			</li>-->
+		</ul>
 
-<!--		<a href="/">-->
-<!--			<img src="/assets/images/airquill-logo-new.svg" />-->
-<!--		</a>-->
-
-<!--		<a href="/posts/">Posts</a>-->
-
-<!--		<a href="/about/">About</a>-->
-
-		</div>
-	</nav>
+	</div>
+</nav>
