--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,11 +3,11 @@
 
 	{% include head.html %}
 
-	<body>
+	<body class="theme-light">
 
 		{% include header.html %}
 
-		<div class="container page-header">
+		<section class="container main">
 
 			<div class="row">
 				<div class="col-md-12">
@@ -18,7 +18,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<p class="small">
-						Posted {{page.date | date_to_long_string }} {% if page.location %} | <i class="fa fa-map-marker">&nbsp;</i>{{ page.location }} {% endif %} | {{ page.content | number_of_words }} words
+						Posted {{page.date | date_to_long_string }} {% if page.location %} | <i class="fas fa-map-marker">&nbsp;</i>{{ page.location }} {% endif %} | {{ page.content | number_of_words }} words
 					</p>
 				</div>
 			</div>
@@ -28,7 +28,11 @@
 
 					<section class="post-content">
 
+						<img src="{{ page.image.url }}" title="{{ page.image.title }}" />
+
 						{{ content }}
+
+
 
 						{% if page.tldr %}
 						<a id="tldr"></a>
@@ -159,7 +163,7 @@
 
 			{% include footer.html %}
 		
-		</div>
+		</section>
 		
 		{% include foot.html %}
 
