--- a/assets/styles/airquill.less
+++ b/assets/styles/airquill.less
@@ -11,6 +11,7 @@
 @white: #ffffff;
 @yellow: #ffff00;
 @grey-light: #e6e6e6;
+@grey-middle: #666666;
 @grey-dark: #333333;
 @black: #000000;
 
@@ -21,145 +22,177 @@
 @square-pattern-light: "/assets/images/lifted-square-pattern-light.png";
 @square-pattern-white: "/assets/images/lifted-square-pattern-white.png";
 
+@post-summary-hover-factor: 10%;
+@post-summary-bar-factor: 5%;
+@post-summary-bar-hover-factor: @post-summary-hover-factor + @post-summary-bar-factor;
+
 .theme-white {
-	color: @white;
+  color: @white;
 }
 
 .theme-yellow {
-	color: @yellow;
+  color: @yellow;
 }
 
 .theme-grey-light {
-	color: @grey-light;
+  color: @grey-light;
 }
 
 .theme-grey-dark {
-	color: @grey-dark;
+  color: @grey-dark;
 }
 
 .theme-black {
-	color: @black;
+  color: @black;
 }
 
 nav.main {
-	min-height: 99px;
+  min-height: 99px;
 
-	ul.nav {
-		position: relative;
-	}
+  ul.nav {
+    margin-top: 4ex;
+    position: relative;
+  }
 
-	a.nav-link {
-		white-space: nowrap;
-	}
+  a.nav-link {
+    white-space: nowrap;
+  }
 
-	.dropdown-toggle:after {
-		content: none;
-	}
+  .dropdown-toggle:after {
+    content: none;
+  }
 
-	a.logo {
-		display: block;
-		height: 93px;
-		width: 424px;
-		background-repeat: no-repeat;
-	}
+  .navigation-cell {
+    vertical-align: bottom;
+  }
+
+  a.logo {
+    display: block;
+    height: 93px;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+
 }
 
 section.main {
-	margin-top: @section-offset;
+  margin-top: @section-offset;
 
-	a {
-		text-decoration: none;
+  a {
+    text-decoration: none;
 
-		&:hover {
-			text-decoration: underline;
-		}
-	}
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 
-	.post-summary {
-		margin-bottom: 3ex;
-	}
+  .post-summary {
+    margin-bottom: 3ex;
 
-	.post-summary-bar {
-		vertical-align: middle;
-		line-height: 33px;
-	}
+    .post-summary-image {
+      min-height: 15ex;
+      background-repeat: no-repeat;
+    }
+
+    .post-summary-content {
+      padding: 2.5ex 1.5em;
+    }
+
+    .post-summary-bar {
+      vertical-align: middle;
+      line-height: 33px;
+    }
+  }
 }
 
 body.theme-light {
-	nav.main {
-		background: url(@square-pattern-dark) repeat;
-		padding: 9px;
+  nav.main {
+    background: url(@square-pattern-dark) repeat;
+    padding: 9px;
 
-		li a.nav-link {
-			color: @grey-dark;
-			background-color: @grey-light;
+    li a.nav-link {
+      color: @grey-dark;
+      background-color: @grey-light;
 
-			&:hover {
-				background-color: @yellow;
-			}
-		}
+      &:hover {
+        background-color: @yellow;
+      }
+    }
 
-		a.logo {
-			background-image: url(@logo-light);
-		}
-	}
+    a.logo {
+      background-image: url(@logo-light);
 
-	section.main {
+      &.tiny {
+        background-image: url(@logo-white);
+      }
 
-		a {
-			color: @grey-dark;
-		}
+    }
+  }
 
-		.post-summary {
+  section.main {
 
-			.post-summary-content {
-				background-color: @grey-light;
-				color: @grey-dark;
-			}
+    a {
+      color: @grey-dark;
+    }
 
-			.post-summary-bar {
-				background-color: darken(@grey-light, 5%);
-			}
-		}
-	}
+    .post-summary {
+
+      .post-summary-content {
+        background-color: @grey-light;
+        color: @grey-dark;
+
+        &:hover {
+          background-color: darken(@grey-light, @post-summary-hover-factor);
+        }
+      }
+
+      .post-summary-bar {
+        background-color: darken(@grey-light, @post-summary-bar-factor);
+
+        &:hover {
+          background-color: darken(@grey-light, @post-summary-bar-hover-factor);
+        }
+      }
+    }
+  }
 }
 
 body.theme-white {
-	nav.main {
-		background: url(@square-pattern-white) repeat;
+  nav.main {
+    background: url(@square-pattern-white) repeat;
 
-		li a.nav-link {
-			color: @grey-light;
-			background-color: @white;
+    li a.nav-link {
+      color: @grey-light;
+      background-color: @white;
 
-			&:hover {
-				color: @grey-dark;
-			}
-		}
+      &:hover {
+        color: @grey-dark;
+      }
+    }
 
-		a.logo {
-			background-image: url(@logo-dark);
-		}
-	}
+    a.logo {
+      background-image: url(@logo-white);
+    }
+  }
 }
 
 body.theme-dark {
-	nav.main {
-		background: url(@square-pattern-dark) repeat;
+  nav.main {
+    background: url(@square-pattern-dark) repeat;
 
-		li a.nav-link {
-			color: @grey-dark;
-			background-color: @black;
+    li a.nav-link {
+      color: @grey-dark;
+      background-color: @black;
 
-			&:hover {
-				color: @yellow;
-			}
-		}
+      &:hover {
+        color: @yellow;
+      }
+    }
 
-		a.logo {
-			background-image: url(@logo-light);
-		}
-	}
+    a.logo {
+      background-image: url(@logo-dark);
+    }
+  }
 }
 
 
@@ -179,58 +212,58 @@ body.theme-dark {
 
 p.content,
 section.post-content {
-	line-height: 32px;
-	font-size: 110%;
-	font-weight: 300;
-	font-family: "Roboto Slab", sans-serif;
+  line-height: 32px;
+  font-size: 110%;
+  font-weight: 300;
+  font-family: "Roboto Slab", sans-serif;
 }
 
 section.post-content {
-	margin-top: 32px;
-	text-align: justify;
+  margin-top: 32px;
+  text-align: justify;
 }
 
 section.post-content p {
-	margin-bottom: 32px;
+  margin-bottom: 32px;
 }
 
 section.post-content blockquote p {
-	margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 div.panel-body.profile {
-	vertical-align: middle;
+  vertical-align: middle;
 }
 
 img.profile {
-	border: 4px solid #E3E3E3;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	border-radius: 50%;
-	width: 64px;
-	height: 64px;
+  border: 4px solid #E3E3E3;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  width: 64px;
+  height: 64px;
 }
 
 a.profile i {
-	font-size: 300%;
-	color: #E3E3E3;
+  font-size: 300%;
+  color: #E3E3E3;
 }
 
 .profile-links {
-	text-align: right;
+  text-align: right;
 }
 
 .container.post p {
-	text-align: justify;
+  text-align: justify;
 }
 
 .footer-link {
-	color: #808080;
-	text-decoration: underline;
+  color: #808080;
+  text-decoration: underline;
 }
 
 .footer-link:hover {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 table.light {
