--- a/assets/styles/airquill.less
+++ b/assets/styles/airquill.less
@@ -99,8 +99,9 @@ section.main {
     }
 
     .post-summary-bar {
-      vertical-align: middle;
-      line-height: 33px;
+      height: 3rem;
+      line-height: 3rem;
+      padding: 0 1.5em;
     }
   }
 }
